EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/31/2009==
realityincarnate: Added EVENT_CAST to player quests
realityincarnate: AA quest functions: $client->GetAAPoints(), $client->SetAAPoints(value)
KLS: Procs will now only occure on a player's targeted mob.

==05/30/2009==
KLS: Redid procs a bit, spell procs should work more consistently and ppm formula should be less broken and will also take into account haste now.
Highly suggested you change your Combat:AvgProcsPerMinute rule to 2.0 if you want it to be live like.
Derision: Group Leadership AA

REQUIRED SQL:

ALTER TABLE `group_leaders` ADD `assist` VARCHAR( 64 ) NOT NULL ,
ADD `marknpc` VARCHAR( 64 ) NOT NULL ,
ADD `leadershipaa` TINYBLOB NOT NULL ;

OPTIONAL SQL:

INSERT INTO `rule_values` VALUES (1,'Character:KillsPerRaidLeadershipAA','50','');
INSERT INTO `rule_values` VALUES (1,'Character:KillsPerGroupLeadershipAA','50','');

==05/29/2009==
Derision: Lay Hands/Harm Touch hot buttons now remain depressed across zoning until reuse timer is up.

==05/28/2009==
Congdar: Bots - updates to bot pvp, raidexp and magepet

==05/27/2009==
Trevius: SoF - Added new opcode and structure to support the Respawn Window.  It isn't fully functional yet, but most of the code is there now.
Congdar: Bots - Fixed botraid experience distribution.

==05/26/2009==
WildcardX: Fixed a bug that displayed the name of a target being summoned in an incorrect format.
Angelox: Bots- Weapons that proc'd rune-types were proc'ing for the whole group. 3 fighters with PGTs made you pretty much bullet-proof.

==05/25/2009==
cavedude: (gaeorn) Added a possible fix for some NPCs not always spawning.
Congdar: Bots - Added PvP for bots.
WildcardX: (erde) Added include for limits.h.

==05/24/2009==
KLS: Fixed dodge/parry/riposte, lowered their effectiveness from skill points slightly.